--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7,6 +7,7 @@
  *
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
+ 
 
 .clearfix {
   *zoom: 1;
@@ -228,6 +229,7 @@ body {
   line-height: 20px;
   color: #333333;
   background-color: #ffffff;
+  padding-bottom:40px;
 }
 
 a {
@@ -4425,12 +4427,22 @@ input[type="submit"].btn.btn-mini {
 .navbar .brand {
   display: block;
   float: left;
-  padding: 10px 20px 10px;
+  padding: 8px 20px 5px;
   margin-left: -20px;
-  font-size: 20px;
-  font-weight: 200;
+  font-size: 18px;
+  font-weight: 400;
   color: #777777;
   text-shadow: 0 1px 0 #ffffff;
+  width: 160px;
+  line-height:70%;
+}
+
+.navbar img{
+  display: block;
+  float: left;
+  margin: 2px 8px -5px 3px;
+  height:35px;
+  width:auto;
 }
 
 .navbar .brand:hover,
@@ -6058,7 +6070,7 @@ a.badge:focus {
   top: 40%;
   left: 15px;
   width: 40px;
-  height: 80px;
+  height: 100px;
   margin-top: 0px;
   font-size: 120px;
   font-weight: 100;
@@ -6130,7 +6142,7 @@ a.badge:focus {
   margin: 0;
   line-height: 1.25;
   color: #FAFAFA;
-  text-shadow: 0 1px 1px rgba(0,0,0,.4);
+  text-shadow: 0 1px 1px rgba(0,0,0,.8);
 }
 
 .carousel-caption .btn {
@@ -6209,3 +6221,48 @@ a.badge:focus {
 .affix {
   position: fixed;
 }
+
+   /* MARKETING CONTENT
+    -------------------------------------------------- */
+
+    /* Center align the text within the three columns below the carousel */
+    .marketing .span4 {
+      text-align: center;
+    }
+    .marketing h2 {
+      font-weight: normal;
+    }
+    .marketing .span4 p {
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+      
+  /* Featurettes
+    ------------------------- */
+
+    .featurette-divider {
+      margin: 80px 0; /* Space out the Bootstrap <hr> more */
+    }
+    .featurette {
+      padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
+      overflow: hidden; /* Vertically center images part 2: clear their floats. */
+    }
+    .featurette-image {
+      margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+    }
+
+    /* Give some space on the sides of the floated elements so text doesn't run right into it. */
+    .featurette-image.pull-left {
+      margin-right: 40px;
+    }
+    .featurette-image.pull-right {
+      margin-left: 40px;
+    }
+
+    /* Thin out the marketing headings */
+    .featurette-heading {
+      font-size: 50px;
+      font-weight: 300;
+      line-height: 1;
+      letter-spacing: -1px;
+    } 
